--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <title>Dawid Rogowicz</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="style.css" rel="stylesheet"></head>
   <body>
       <div id="header-canvas-container"></div>
+      <h1 class="inv">Dawid Rogowicz</h1>
       <nav id="nav_bar">
         <ul>
           <li><a href="#">HOME</a></li>
@@ -30,18 +32,17 @@
           </div>
         </div>
       </section>
-      <section id="something">
+      <section id="technologies">
         <div class="cell" id="2">
           <div class="inner-cell-container">
             <div class="background-container">
               <h2>Technologies</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </p>
+              <div id="icon-container">
+                <i class="fa fa-android"></i>
+                <i class="fa fa-css3"></i>
+                <i class="fa fa-html5"></i>
+                <i class="fa fa-git"></i>
+              </div>
             </div>
           </div>
         </div>
