--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <div>
           <div id="button">Menu</div>
           <ul>
-            <li><a href="#" onClick="dataLayer.push({'destination': 'home'})">HOME</a></li>
-            <li><a href="#1" onClick="dataLayer.push({'destination': 'about me'})">ABOUT ME</a></li>
-            <li><a href="#2" onClick="dataLayer.push({'destination': 'technologies'})">TECHNOLOGIES</a></li>
-            <li><a href="#3" onClick="dataLayer.push({'destination': 'my projects'})">MY PROJECTS</a></li>
-            <li><a href="#4" onClick="dataLayer.push({'destination': 'contact'})">CONTACT</a></li>
+            <li><a href="#" class='click' onClick="dataLayer.push({'destination': 'home'})">HOME</a></li>
+            <li><a href="#1" class='click' onClick="dataLayer.push({'destination': 'about me'})">ABOUT ME</a></li>
+            <li><a href="#2" class='click' onClick="dataLayer.push({'destination': 'technologies'})">TECHNOLOGIES</a></li>
+            <li><a href="#3" class='click' onClick="dataLayer.push({'destination': 'my projects'})">MY PROJECTS</a></li>
+            <li><a href="#4" class='click' onClick="dataLayer.push({'destination': 'contact'})">CONTACT</a></li>
           </ul>
         </div>
       </nav>
